--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <h2 class="section-title">Saran & Pemesanan</h2>
             <div class="contact-details">
                 <p>Pesan atau berikan masukan Anda melalui:</p>
-                <a href="https://wa.me/081393659990" target="_blank" class="whatsapp-button">📞 Hubungi Kami 0813-9365-9990</a>
+                <a href="https://wa.me/+6281393659990" target="_blank" class="whatsapp-button">📞 Hubungi Kami 0813-9365-9990</a>
                 <p class="payment-info">Pembayaran: QRIS, Cash, COD (+Rp1.000 Ongkir)</p>
             </div>
         </section>
@@ -62,4 +62,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
