--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
     <div class="floating-emoji close">🍓</div>
     <div class="floating-emoji far">🍓</div>
     <div class="floating-emoji close">🍞</div>
-
-    <header class="hero-section">
+    <div class="floating-emoji far">🍓</div> <header class="hero-section">
         <h1 class="main-title">Strawberry Sando</h1>
         <p class="tagline">Roti Buah Strawberry & Whip Cream Lembut</p>
     </header>
@@ -26,26 +25,26 @@
         <section class="info-section">
             <h2 class="section-title">Kenalan dengan Strawberry Sando</h2>
             <p>Strawberry Sando kami adalah perpaduan sempurna antara roti lembut, krim kocok manis yang ringan, dan irisan buah strawberry segar pilihan. Kami menjamin setiap gigitan memberikan sensasi manis, asam, dan kelembutan yang tak terlupakan.</p>
-            <p>Saat ini, kami fokus menyajikan <i>Strawberry Sando</i> yang pasti memuaskan. Nantikan varian buah lain segera!</p>
+            <p>Saat ini, kami fokus menyajikan **Strawberry Sando Klasik** yang pasti memuaskan. Nantikan varian buah lain segera!</p>
         </section>
 
         <section class="product-showcase">
             <div class="product-item hidden-item item-1">
-                <img src="image/strawberry sando.jpeg" alt="Strawberry Sando" class="circular-image">
+                <img src="placeholder-roti.jpg" alt="Strawberry Sando" class="circular-image">
                 <p>Kesegaran dalam Roti</p>
             </div>
             
             <div class="product-item hidden-item item-2">
-                <img src="image/Party Recipes.jpeg" alt="Strawberry Segar" class="circular-image">
+                <img src="placeholder-strawberry.jpg" alt="Strawberry Segar" class="circular-image">
                 <p>Strawberry Pilihan Terbaik</p>
             </div>
         </section>
 
         <section class="price-section">
             <h2 class="section-title">Harga Spesial Pembukaan!</h2>
-            <div class="price-container">
+            <div class="price-container" onclick="applyDiscount()">
                 <span id="original-price" class="original-price">Rp12.000</span>
-                <span id="discount-price" class="discount-price" onclick="applyDiscount()">Rp10.000</span>
+                <span id="discount-price" class="discount-price">Rp10.000</span>
             </div>
             <p class="small-text">*Klik harga di atas untuk melihat harga diskon pembukaan!</p>
         </section>
@@ -54,7 +53,7 @@
             <h2 class="section-title">Saran & Pemesanan</h2>
             <div class="contact-details">
                 <p>Pesan atau berikan masukan Anda melalui:</p>
-                <a href="https://wa.me/+6281393659990" target="_blank" class="whatsapp-button">📞 Hubungi Kami 0813-9365-9990</a>
+                <a href="https://wa.me/NOMOR_ANDA" target="_blank" class="whatsapp-button">📞 Hubungi Kami (Ganti NOMOR_ANDA)</a>
                 <p class="payment-info">Pembayaran: QRIS, Cash, COD (+Rp1.000 Ongkir)</p>
             </div>
         </section>
@@ -62,5 +61,4 @@
 
     <script src="script.js"></script>
 </body>
-
 </html>
