--- a/index.html
+++ b/index.html
@@ -26,17 +26,17 @@
         <section class="info-section">
             <h2 class="section-title">Kenalan dengan Strawberry Sando</h2>
             <p>Strawberry Sando kami adalah perpaduan sempurna antara roti lembut, krim kocok manis yang ringan, dan irisan buah strawberry segar pilihan. Kami menjamin setiap gigitan memberikan sensasi manis, asam, dan kelembutan yang tak terlupakan.</p>
-            <p>Saat ini, kami fokus menyajikan **Strawberry Sando Klasik** yang pasti memuaskan. Nantikan varian buah lain segera!</p>
+            <p>Saat ini, kami fokus menyajikan <i>Strawberry Sando</i> yang pasti memuaskan. Nantikan varian buah lain segera!</p>
         </section>
 
         <section class="product-showcase">
             <div class="product-item hidden-item item-1">
-                <img src="placeholder-roti.jpg" alt="Strawberry Sando" class="circular-image">
+                <img src="image/strawberry sando.jpeg" alt="Strawberry Sando" class="circular-image">
                 <p>Kesegaran dalam Roti</p>
             </div>
             
             <div class="product-item hidden-item item-2">
-                <img src="placeholder-strawberry.jpg" alt="Strawberry Segar" class="circular-image">
+                <img src="image/Party Recipes.jpeg" alt="Strawberry Segar" class="circular-image">
                 <p>Strawberry Pilihan Terbaik</p>
             </div>
         </section>
@@ -63,4 +63,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
