--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <section class="info-section">
             <h2 class="section-title">Kenalan dengan Strawberry Sando</h2>
             <p>Strawberry Sando kami adalah perpaduan sempurna antara roti lembut, krim kocok manis yang ringan, dan irisan buah strawberry segar pilihan. Kami menjamin setiap gigitan memberikan sensasi manis, asam, dan kelembutan yang tak terlupakan.</p>
-            <p>Saat ini, kami fokus menyajikan <i>Strawberry Sando</i> yang pasti memuaskan. Nantikan varian buah lain segera!</p>
+            <p>Saat ini, kami fokus menyajikan <i>Strawberry Sando</i> yang kontol pasti memuaskan. Nantikan varian buah lain segera!</p>
         </section>
 
         <section class="product-showcase">
@@ -63,5 +63,6 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
